--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     var greet;
 
     if (hrs < 12)
-        greet = 'good morning, your name.  ';
+        greet = 'good morning,jana.  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'good afternoon, your name. ';
+        greet = 'good afternoon, jana. ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'good evening, your name.  ';
+        greet = 'good evening, jana.  ';
 
     document.getElementById('lbl').innerHTML = `
         <div class="container">
